{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 172,
  "lineage": "b6da9557-4024-2b77-8256-8d44474f7c53",
  "resources": [
    {
      "module": "module.app_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "AppServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a84b17679da3d3f",
            "arn": "arn:aws:ec2:us-west-1:212335697154:instance/i-08ff1f7838fc5ef8b",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ff1f7838fc5ef8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a78e0427457f35c8",
            "private_dns": "ip-10-0-0-82.us-west-1.compute.internal",
            "private_ip": "10.0.0.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dfa68f6916f45a9f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0864a280acca1dd61",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "AppServer"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "AppServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c3c9a9566e63f23"
            ]
          },
          "dependencies": [
            "module.private_subnet.aws_subnet.subnet_private",
            "module.security_group.aws_security_group.sg_02",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.coreauth_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "AppServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a84b17679da3d3f",
            "arn": "arn:aws:ec2:us-west-1:212335697154:instance/i-03985644df3c92257",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03985644df3c92257",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04750b017e3183ca2",
            "private_dns": "ip-10-0-0-95.us-west-1.compute.internal",
            "private_ip": "10.0.0.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00556da2e3b9e1c4f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0864a280acca1dd61",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "CoreAuth Server"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "CoreAuth Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c3c9a9566e63f23"
            ]
          },
          "dependencies": [
            "module.private_subnet.aws_subnet.subnet_private",
            "module.security_group.aws_security_group.sg_02",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.db_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "workflow_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a84b17679da3d3f",
            "arn": "arn:aws:ec2:us-west-1:212335697154:instance/i-0502b17c3c9d9282d",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0502b17c3c9d9282d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b8beb950c7a8f37",
            "private_dns": "ip-10-0-0-123.us-west-1.compute.internal",
            "private_ip": "10.0.0.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6867375fa1bc19e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0864a280acca1dd61",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "DB_Server"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "DB_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c3c9a9566e63f23"
            ]
          },
          "dependencies": [
            "module.private_subnet.aws_subnet.subnet_private",
            "module.security_group.aws_security_group.sg_02",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.external_webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "external_webserver_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a84b17679da3d3f",
            "arn": "arn:aws:ec2:us-west-1:212335697154:instance/i-0f9a28a2de54fd52f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9a28a2de54fd52f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c7172177ca2beef4",
            "private_dns": "ip-10-0-0-143.us-west-1.compute.internal",
            "private_ip": "10.0.0.143",
            "public_dns": "ec2-3-101-148-208.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.148.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05db6e8d2d9817f48",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d0adfc4ff3b4543",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "External WebServer"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "External WebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088528b3d0a1b3f9a"
            ]
          },
          "dependencies": [
            "module.public_subnet.aws_subnet.subnet_public",
            "module.security_group.aws_security_group.sg_01",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.internal_webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "internal_webserver_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a84b17679da3d3f",
            "arn": "arn:aws:ec2:us-west-1:212335697154:instance/i-0b84160d99996d1c1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b84160d99996d1c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0de23747cd11833fc",
            "private_dns": "ip-10-0-0-219.us-west-1.compute.internal",
            "private_ip": "10.0.0.219",
            "public_dns": "ec2-54-176-121-170.us-west-1.compute.amazonaws.com",
            "public_ip": "54.176.121.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c56a548adce5fdb8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d0adfc4ff3b4543",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "internal WebServer"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "internal WebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088528b3d0a1b3f9a"
            ]
          },
          "dependencies": [
            "module.public_subnet.aws_subnet.subnet_public",
            "module.security_group.aws_security_group.sg_01",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:212335697154:internet-gateway/igw-00615eebc558aa2c0",
            "id": "igw-00615eebc558aa2c0",
            "owner_id": "212335697154",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "InternetGateway"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "InternetGateway"
            },
            "vpc_id": "vpc-07fe6b4faf70f6fd5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.kms_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "KMSServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a84b17679da3d3f",
            "arn": "arn:aws:ec2:us-west-1:212335697154:instance/i-02ac69f63a38bce36",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ac69f63a38bce36",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-098e14fb4e8adb51b",
            "private_dns": "ip-10-0-0-79.us-west-1.compute.internal",
            "private_ip": "10.0.0.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0181752f23b0a9e6f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0864a280acca1dd61",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "KMSServer"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "KMSServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c3c9a9566e63f23"
            ]
          },
          "dependencies": [
            "module.private_subnet.aws_subnet.subnet_private",
            "module.security_group.aws_security_group.sg_02",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:212335697154:subnet/subnet-0864a280acca1dd61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.64/26",
            "id": "subnet-0864a280acca1dd61",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212335697154",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "subnet_private"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "subnet_private"
            },
            "vpc_id": "vpc-07fe6b4faf70f6fd5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:212335697154:subnet/subnet-06d0adfc4ff3b4543",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.128/25",
            "id": "subnet-06d0adfc4ff3b4543",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212335697154",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "subnet_public"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "subnet_public"
            },
            "vpc_id": "vpc-07fe6b4faf70f6fd5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:212335697154:route-table/rtb-05692e41212679005",
            "id": "rtb-05692e41212679005",
            "owner_id": "212335697154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00615eebc558aa2c0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "RouteTable"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "RouteTable"
            },
            "vpc_id": "vpc-07fe6b4faf70f6fd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.ig_01",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd2b23beba33bd4e",
            "route_table_id": "rtb-05692e41212679005",
            "subnet_id": "subnet-06d0adfc4ff3b4543"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.ig_01",
            "module.public_subnet.aws_subnet.subnet_public",
            "module.route_table.aws_route_table.rt",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feb37631c1215b60",
            "route_table_id": "rtb-05692e41212679005",
            "subnet_id": "subnet-0864a280acca1dd61"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.ig_01",
            "module.private_subnet.aws_subnet.subnet_private",
            "module.route_table.aws_route_table.rt",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:212335697154:security-group/sg-088528b3d0a1b3f9a",
            "description": "This firewall allows RDP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088528b3d0a1b3f9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP",
                "from_port": 3386,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3386
              }
            ],
            "name": "sg_01",
            "name_prefix": "",
            "owner_id": "212335697154",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "SecurityGroup"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe6b4faf70f6fd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:212335697154:security-group/sg-08c3c9a9566e63f23",
            "description": "This firewall does not allow connection from Internet",
            "egress": [],
            "id": "sg-08c3c9a9566e63f23",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/27"
                ],
                "description": "MSSQL",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/27"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_02",
            "name_prefix": "",
            "owner_id": "212335697154",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07fe6b4faf70f6fd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.tnp_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TNPServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a84b17679da3d3f",
            "arn": "arn:aws:ec2:us-west-1:212335697154:instance/i-0f64e91c2fe21f5c1",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f64e91c2fe21f5c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09dff463eb729fc7c",
            "private_dns": "ip-10-0-0-103.us-west-1.compute.internal",
            "private_ip": "10.0.0.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020f51cc5515f88fd",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0864a280acca1dd61",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "TNP_Server"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "TNP_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c3c9a9566e63f23"
            ]
          },
          "dependencies": [
            "module.private_subnet.aws_subnet.subnet_private",
            "module.security_group.aws_security_group.sg_02",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CoreCard_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:212335697154:vpc/vpc-07fe6b4faf70f6fd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-025c6c4796b23d1e5",
            "default_route_table_id": "rtb-018dcdee7074cf132",
            "default_security_group_id": "sg-027c66ccf9f0308b0",
            "dhcp_options_id": "dopt-dd08dfbb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07fe6b4faf70f6fd5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-018dcdee7074cf132",
            "owner_id": "212335697154",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "TF_CoreCard_VPC"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "TF_CoreCard_VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.wcf_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "WCFServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a84b17679da3d3f",
            "arn": "arn:aws:ec2:us-west-1:212335697154:instance/i-0c29b958db025d472",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c29b958db025d472",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04d9cd45cb2fe316f",
            "private_dns": "ip-10-0-0-99.us-west-1.compute.internal",
            "private_ip": "10.0.0.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c140eb11c2a061b8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0864a280acca1dd61",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "WCF_Server"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "WCF_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c3c9a9566e63f23"
            ]
          },
          "dependencies": [
            "module.private_subnet.aws_subnet.subnet_private",
            "module.security_group.aws_security_group.sg_02",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.workflow_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "workflow_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a84b17679da3d3f",
            "arn": "arn:aws:ec2:us-west-1:212335697154:instance/i-0555cd935a9349ffe",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0555cd935a9349ffe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b7843d32f28984d3",
            "private_dns": "ip-10-0-0-72.us-west-1.compute.internal",
            "private_ip": "10.0.0.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07e1dc8e5ea8556d7",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0864a280acca1dd61",
            "tags": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "Workflow_Server"
            },
            "tags_all": {
              "CreatedByTerraform": "true",
              "Environment": "dev",
              "Name": "Workflow_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c3c9a9566e63f23"
            ]
          },
          "dependencies": [
            "module.private_subnet.aws_subnet.subnet_private",
            "module.security_group.aws_security_group.sg_02",
            "module.vpc.aws_vpc.CoreCard_VPC"
          ]
        }
      ]
    }
  ]
}